--- a/genStyle.css
+++ b/genStyle.css
@@ -11,36 +11,37 @@ their parent containers when they have padding*/
 body{
 	font-family: 'Josefin Slab', serif;
 	margin: 0px;
-/*	height: 100%;*/
+	font-size: 98pt; /*the font size that all font percentages will be referencing*/
 }
 #box{ /*this is for the header and nav bar only*/
 	display: flex;
 	flex: 0 1 auto;
 	flex-direction: column;
-	margin-bottom: 20px;
+	margin-bottom: 4vh;
 }
 #nav {
 	position: relative;
 	font-family: 'Amatic SC', cursive;
-	font-size: 26pt;
+	font-size: 35%;
 	text-align: center;
 	font-weight: 700;
-	margin-right: 14%;
+	margin-right: 15%;
 	margin-left: auto;
+	margin-top: 2pt;
 }
 #nav a{
 	color: black;
 	text-decoration: none;
 }
 #nav #artwork{
-	margin-right: 20px;
+	margin-right: .2em;
 }
 #nav #shop{
-	margin-right: 20px;
-	margin-left: 20px;
+	margin-right: .2em;
+	margin-left: .2em;
 }
 #nav #contact{
-	margin-left: 20px;
+	margin-left: .2em;
 }
 #nav img{
 	height: .2em;
@@ -55,14 +56,14 @@ body{
 #annie {
 	position: relative;
 	text-align: center;
-	font-size: 74pt;
+	font-size: 79%;
 	font-family: 'Amatic SC', cursive;
 	font-weight: 400;
 }
 .bar1 {
 	position: absolute;
 	background-color: #ffddc7;
-	height: 30pt;
+	height: 34pt;
 	width: 97%;
 	border-radius: 5px;
 	right: 0;
@@ -72,7 +73,7 @@ body{
 .bar2 {
 	width: 88%;
 	left: 0;
-	top: 95pt;
+	top: 105pt;
 }
 .corners{
 	border-radius: 0px;
@@ -85,11 +86,12 @@ body{
 #footer{
 	position: static;
 	text-align: center;
+	font-size: 15%;
 	width: 100%;
 	bottom:0;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
 	#box{
 		display: grid;
 		grid-template-areas: 
@@ -107,7 +109,7 @@ body{
 		display: grid;
 		grid-template-areas: 'artwork dot1 shop dot2 contact';
 		margin-left: auto;
-		margin-right: 7%;
+		margin-right: 10%;
 	}
 	#nav a{
 		color: black;
