--- a/genStyle.css
+++ b/genStyle.css
@@ -22,7 +22,7 @@ body{
 #nav {
 	position: relative;
 	font-family: 'Amatic SC', cursive;
-	font-size: 35%;
+	font-size: 9vw;
 	text-align: center;
 	font-weight: 700;
 	margin-right: 15%;
@@ -56,7 +56,7 @@ body{
 #annie {
 	position: relative;
 	text-align: center;
-	font-size: 79%;
+	font-size: 20.5vw;
 	font-family: 'Amatic SC', cursive;
 	font-weight: 400;
 }
