--- a/genStyle.css
+++ b/genStyle.css
@@ -12,6 +12,16 @@ body{
 	font-family: 'Josefin Slab', serif;
 	margin: 0px;
 	font-size: 98pt; /*the font size that all font percentages will be referencing*/
+
+/*polka dots below*/
+/* 	background-image: radial-gradient(#f2f2f2 5%, transparent 5%), radial-gradient(#f2f2f2 5%, transparent 5%);
+  	background-color: #ffffff;
+  	background-attachment: fixed;
+  	background-position: 0% 0%, 50% 50%;
+  	background-size: 5% 10%;*/
+
+
+
 }
 #box{ /*this is for the header and nav bar only*/
 	display: flex;
