fixed: forgot to import font on shop css

--- a/css/shop.css
+++ b/css/shop.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Josefin+Slab&display=swap');
+
 	.slides {
 		display: none;
 	}	
