--- a/css/contact.css
+++ b/css/contact.css
@@ -1,165 +1,243 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Josefin+Slab&display=swap');
 
-/*submit confirmation above*/
-#handles{
-	font-size: 4.5vw;
-	position: absolute;
-	margin-top: -5vw;
-	margin-left: 7vw;
-	width: 45vw;
-}
-#my_email{
-	margin-top: 0;
-	margin-bottom: 0;
-}
-#my_email #email_text{
-	position: absolute;
-	margin-top: 1.5vw;
-	margin-left: 1.75vw;
-	text-decoration: none;
-	color: black;
-}
-#insta_handle{
-	margin-top: 0;
-	margin-bottom: 0;
-}
-#insta_handle #insta_text{
-	position: absolute;
-	margin-top: 1vw;
-	margin-left: 1.15vw;
-	text-decoration: none;
-	color: black;
-}
-#with_pupils{
-	display: block;
-}
-#without_pupils{
-	display: none;
-}
-.doodle{
-	width: 110vw;
-	height: auto;
-	margin-top: -2vw;
-	margin-bottom: -7vw;
-}
-#email_box{
-	font-size: 5vw;
-	margin: -16vw/*top*/ 7vw/*right*/ 5vw/*bottom*/ 7vw/*left*/;
-}
-#email_box input{
-	width: 100%;
-	height: 12vw;
-	margin-top: 1.5vw;
-	margin-bottom: 1.5vw;
-	font-size: 5vw;
-	font-family: 'Josefin Slab', serif;
-	padding: 0vw 0vw 0vw 1.5vw;;
-}
-#email_box textarea{
-	width: 100%;
-	height: 45vw;
-	margin-top: 1.5vw;
-	margin-bottom: 0;
-	font-size: 5vw;
-	font-family: 'Josefin Slab', serif;
-	padding: 1.5vw 1.5vw 0vw 2vw;
-}
-#email_box button{
-	background-color: black;
-	border-radius: 0;
-	border: 0;
-	color: white;
-	font-family: 'Amatic SC', cursive;
-	font-size: 7vw;
-	padding-left: 2.2vw;
-	padding-right: 2vw;
-	margin-top: 2vw;
-	margin-right: 0;
-	float: right;
-}
+
+	#inner_box{
+		/* flexbox containing handles, phone, and email_box */
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		width: 100%;
+		height: auto;
+	}
+
+	/* -------------------------------------------------------------------------- */
+	/*             handles: email address and insta username container            */
+	/* -------------------------------------------------------------------------- */
+
+	#handles{
+		font-size: 4.5vw;
+		width: 62vw;
+		height: 14vw;
+
+		z-index: 10; /*above phone (drawing)*/
+		margin-left: 5vw;
+	}
+		#email_container{
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: center;
+			width: 100%;
+			height: 50%;
+		}
+		#puffalope{
+			width: 6vw;
+			margin: 1vw 2vw 1vw 1vw;
+		}
+		#email_text{
+			text-decoration: none;
+			color: black;
+		}
+		#insta_container{
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: center;
+			width: 100%;
+			height: 50%;
+		}
+		#insta_icon{
+			width: 6vw;
+			margin: 1vw 2vw 1vw 1vw;
+		}
+		#insta_text{
+			margin-top: -1vw;
+		}
+		#insta_text a{
+			text-decoration: none;
+			color: black;
+		}
+
+	/* -------------------------------------------------------------------------- */
+	/*                           phone: image container                           */
+	/* -------------------------------------------------------------------------- */
+
+	#phone{
+		width: 100%;
+		height: auto;
+
+		z-index: 1; /*below handles*/
+
+		margin-top: -10vw;
+		margin-left: 0;
+	}
+		#with_pupils{
+			display: none;
+		}
+		/* image without pupils for eye movement on desktop */
+		#without_pupils{
+			display: block;
+		}
+		.doodle{
+			height: 80vw;
+			width: auto;
+		}
+	
+	/* -------------------------------------------------------------------------- */
+	/*                       email_box: email form container                      */
+	/* -------------------------------------------------------------------------- */
+
+	#email_box{
+		width: 90%;
+		height: auto;
+		font-size: 5vw;
+		z-index: 1; /*same as phone (drawing)*/
+		margin: -14vw 5vw auto 5vw;
+	}
+	#email_box input{
+		width: 100%;
+		height: 10vw;
+		margin-top: .5vw;
+		margin-bottom: 1vw;
+		font-size: 4vw;
+		font-family: 'Josefin Slab', serif;
+		padding: 0 .1vw 0px 1vw;;
+	}
+		#email_box textarea{
+			width: 100%;
+			height: 36vw;
+			margin-top: .5vw;
+			margin-bottom: 0;
+			font-size: 4vw;
+			font-family: 'Josefin Slab', serif;
+			padding: 3vw 1.5vw 0 1.5vw;
+		}
+		#email_box button{
+			background-color: black;
+			border-radius: 0;
+			border: 0;
+			color: white;
+			font-family: 'Amatic SC', cursive;
+			font-size: 7vw;
+			padding-left: 2vw;
+			padding-right: 2vw;
+			margin: 1vw 0vw;
+			float: right;
+		}
 #email_box button:hover{
 	background-color: #ff7800;
 	cursor: pointer;
-}
+} 
 
 input[name="_honey"] {
 		display: none;
 }
 
-/*desktop below*/
+/* -------------------------------------------------------------------------- */
+/*                                desktop below                               */
+/* -------------------------------------------------------------------------- */
 
 @media (min-width: 992px), (orientation: landscape) {
+
 	#inner_box{
-		display: grid;
-		grid-template-areas:
-		'alert' 
-		'doodle email_box';
+		/* flexbox containing handles, phone, and email_box */
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+		width: 100%;
+		height: 45vw;
 	}
-	#handles img{
-		width: 2.5vw;
-	}
+
+
+	/* -------------------------------------------------------------------------- */
+	/*             handles: email address and insta username container            */
+	/* -------------------------------------------------------------------------- */
+
 	#handles{
-		position: relative;
-		margin-top: -3vw;
-		margin-left: 2.5vw;
 		font-size: 2vw;
-		z-index: 2;
+		width: 30vw;
+		height: 8vw;
+
+		z-index: 10; /*above phone (drawing)*/
+		margin-left: 2.35vw;
 	}
-	#my_email{
-		margin-top: 0;
-		margin-bottom: 0;
-		/*height: 5vh;*/
-	}
-	#my_email img{
-		margin-top: .25vw;
-	}
-	#my_email #email_text{
-		position: absolute;
-		margin-top: .75vw;
-		margin-left: 1vw;
-		text-decoration: none;
-	}
-	#insta_handle{
-		margin-top: 0;
-		margin-bottom: 0;
-		/*height: 5vh;*/
-	}
-	#insta_handle img{
-		margin-top: .5vw;
-	}
-	#insta_handle #insta_text{
-		position: absolute;
-		margin-top: .75vw;
-		margin-left: .75vw;
-		text-decoration: none;
-		color: black;
-	}
+		#email_container{
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: center;
+			width: 100%;
+			height: 50%;
+		}
+		#puffalope{
+			width: 3vw;
+			margin: 1vw 1vw 1vw 1vw;
+		}
+		#email_text{
+			text-decoration: none;
+			color: black;
+		}
+		#insta_container{
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: center;
+			width: 100%;
+			height: 50%;
+		}
+		#insta_icon{
+			width: 3vw;
+			margin: 1vw 1vw 1vw 1vw;
+		}
+		#insta_text{
+			margin-top: -.5vw;
+		}
+		#insta_text a{
+			text-decoration: none;
+			color: black;
+		}
+
+	/* -------------------------------------------------------------------------- */
+	/*                           phone: image container                           */
+	/* -------------------------------------------------------------------------- */
+
 	#phone{
-		width: 62vw;
-		position: relative;
+		width: 52vw;
+		height: 43.5vw;
+
+		z-index: 1; /*below handles*/
+		
+
+
+		margin-top:auto;
+		margin-left: -32.35vw;
 	}
-	#with_pupils{
-		display: none;
-	}
-	#without_pupils{
-		display: block;
-	}
-	.doodle{
-		height: auto;
-		width: 62vw;
-		margin-top: -8vw;
-		margin-bottom: 0;
-		z-index: -1;
-	}
+		#with_pupils{
+			display: none;
+		}
+		/* image without pupils for eye movement on desktop */
+		#without_pupils{
+			display: block;
+		}
+		.doodle{
+			height: auto;
+			width: 95%;
+			margin-top: 2vw;
+		}
+	
+	/* -------------------------------------------------------------------------- */
+	/*                       email_box: email form container                      */
+	/* -------------------------------------------------------------------------- */
+
 	#email_box{
-		margin: -48.1vw/*top*/ 0/*right*/ 2vw/*bottom*/ 52.5vw/*left*/;
-		width: 45vw;
-		height: auto;
+		width: 48vw;
+		height: 43.5vw;
 		font-size: 2vw;
-		z-index: 2;
+		z-index: 1; /*same as phone (drawing)*/
+		margin: auto;
 	}
 	#email_box input{
-		width: 100%;
+		width: 95%;
 		height: 4vw;
 		margin-top: .5vw;
 		margin-bottom: 1vw;
@@ -167,26 +245,25 @@ input[name="_honey"] {
 		font-family: 'Josefin Slab', serif;
 		padding: 0 .1vw 0px 1vw;;
 	}
-	#email_box textarea{
-		width: 100%;
-		height: 12vw;
-		margin-top: .5vw;
-		margin-bottom: 0;
-		font-size: 2vw;
-		font-family: 'Josefin Slab', serif;
-		padding: 1vw .1vw 0 1vw;
-		rows: 20;
-	}
-	#email_box button{
-		background-color: black;
-		border-radius: 0;
-		border: 0;
-		color: white;
-		font-family: 'Amatic SC', cursive;
-		font-size: 3vw;
-		padding-left: 1vw;
-		padding-right: 1vw;
-		margin-top: 1vw;
-		margin-right: 0;
-	}
+		#email_box textarea{
+			width: 95%;
+			height: 12vw;
+			margin-top: .5vw;
+			margin-bottom: 0;
+			font-size: 2vw;
+			font-family: 'Josefin Slab', serif;
+			padding: 1vw .1vw 0 1vw;
+		}
+		#email_box button{
+			background-color: black;
+			border-radius: 0;
+			border: 0;
+			color: white;
+			font-family: 'Amatic SC', cursive;
+			font-size: 3vw;
+			padding-left: 1vw;
+			padding-right: 1vw;
+			margin: 1vw 2.35vw;
+			float: right;
+		}
 }
