--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Josefin+Slab&display=swap');
 
-/*artworks on page*/
+/* artworks on page */
 #artworks{
-	/*holds all the artworks*/
+	/* holds all the artworks */
 	display: grid;
 	grid-gap: 3vw;
 }
@@ -22,7 +22,7 @@
 	cursor: pointer;
 }
 
-/*back to top button*/
+/* back to top button */
 #back2top{
   display: none;
   position: fixed;
@@ -36,20 +36,18 @@
   font-family: 'Amatic SC', serif;
   font-weight: bolder;
   font-size: 7vw;
-  padding-bottom: 1vw;
-  padding-left: 1vw;
-  padding-right: 1vw;
+  padding: 0 1.5vw 0 1.5vw;
   border-radius: 0vw;
-  /*font-weight: 700;*/
+  font-weight: 700;
 }
 #back2top:hover {
   color: #ff7800;
   background-color: black;
 }
 
-/*mobile lightbox*/
+/* mobile lightbox */
 
-/* The Modal (background) */
+ /* The Modal (background)  */
 .modal {
   display: none;
   position: fixed;
@@ -66,42 +64,42 @@
   background-color: rgba(0, 0, 0,  .95);
 
 }
-/* Modal Content */
+ /* Modal Content  */
 .modal-content {
   position: relative;
-  /*background-color: #000000;*/
+  background-color: #000000;
   margin-top: 2vw;
- /* margin: auto;*/
+  margin: auto;
   padding: 0;
   max-width: 100%;
-  /*max-height: 50vw;*/
- /* max-width: 1200px;*/
+  max-height: 50vw;
+  max-width: 1200px;
 }
-/* The Close Button */
+ /* The Close Button  */
 .close {
   color: white;
   position: absolute;
   top: 0vw;
   right: 3vw;
   font-size: 13vw;
-  /*font-weight: bold;*/
+  font-weight: bold;
 }
 .close:hover,
 .close:focus {
   color: #ff7800;
   text-decoration: none;
 }
-/* Number text (1/3 etc) */
+ /* Number text (1/3 etc)  */
 .numbertext {
   color: #ffffff50;
   font-size: 5vw;
   margin-top: -7vw;
   margin-left: 3vw;
-  /*padding: 8px 12px;*/
+  padding: 8px 12px;
   position: absolute;
 }
 .mySlides {
-/*dont show initially*/
+/* dont show initially */
   display: none;
 }
 .mySlides img{
@@ -110,11 +108,11 @@
 .mySlides video{
 	width: 100%;
 }
-/*class to show when things are clickable*/
+/* class to show when things are clickable */
 .cursor {
   cursor: pointer;
 }
-/* Next & previous buttons */
+ /* Next & previous buttons  */
 .prev,
 .next {
   position: absolute;
@@ -129,11 +127,11 @@
 .prev{
 	left: 5vw;
 }
-/* Position the "next button" to the right */
+ /* Position the "next button" to the right  */
 .next {
   right: 5vw;
 }
-/* On hover, add a black background color with a little bit see-through */
+ /* On hover, add a black background color with a little bit see-through  */
 .prev:hover,
 .next:hover {
 	cursor: pointer;
@@ -156,7 +154,7 @@
   font-size: 5vw;
   font-family: 'Josefin Slab', serif;
 }
-/* the little icons of all the images in the lightbox*/
+ /* the little icons of all the images in the lightbox */
 .column { 
   display: flex;
   flex-wrap: wrap;
@@ -172,11 +170,11 @@
   margin: 1vw;
   width: 15vw;
 }
-/*unselected little icons*/
+/* unselected little icons */
 .demo {
   opacity: .25;
 }
-/*selected little icon*/
+selected little icon
 .active,
 .demo:hover {
   opacity: 1;
@@ -184,6 +182,12 @@
 
 /*desktop*/
 @media (min-width: 992px), (orientation: landscape) {
+	#footer{
+		position: static;
+		bottom:0;
+		padding-bottom: 3.5vw;
+		padding-top: 3.5vw;
+	}
 	#back2top {
 	  bottom: 2vw;
 	  right: 2vw;
@@ -305,6 +309,29 @@
 	    grid-row-start: 21;
 	    grid-row-end: 24;
 	}
+
+/* back to top button */
+#back2top{
+	display: none;
+	position: fixed;
+	bottom: 3vw;
+	right: 3vw;
+	border: none;
+	outline: none;
+	color: #000000;
+	background-color: #00000050;
+	cursor: pointer;
+	font-family: 'Amatic SC', serif;
+	font-weight: bolder;
+	font-size: 5vw;
+	padding: 0 1vw 0 1vw;
+	border-radius: 0vw;
+	font-weight: 700;
+  }
+  #back2top:hover {
+	color: #ff7800;
+	background-color: black;
+  }
 
 /*desktop lightbox below*/
 
