--- a/css/shop_eyes.css
+++ b/css/shop_eyes.css
@@ -1,10 +1,81 @@
-	.eye{
-		display: none;
-	}
-	.socket{
-		display: none;
-	}
+/* -------------------------------------------------------------------------- */
+/*                               mobile version                               */
+/* -------------------------------------------------------------------------- */
+/*general eye classes*/
+.eye{
+	display: block;
+	position: relative;
+	background-color: black;
+	height: .5vw;
+	width: .5vw;
+	border-radius: 50%;
+	z-index: 100; /*above everything so high number*/
 
+}
+.socket{
+	display: block;
+	position: absolute;
+	overflow: hidden;
+	height: 1vw;
+	width: 1.5vw;
+	z-index: 99; /*just below the eyes*/
+
+	/* background-color: pink; */
+
+}
+/*eye and socket for right girl*/
+#socket_right{
+	/* left: 73.1vw;
+	top: 23vw; */
+	margin: 39.75vw 0 0 62vw;
+
+	height: .95vw;
+	width: 1.4vw;
+
+}
+#eye_right_mobile{
+	left: .25vw; /*range: 0vw to 1vw*/
+	top: .25vw; /*range: -.1vw to .5vw*/
+
+}
+/*eyes and sockets for left girl*/
+#right_socket_left{
+	/* left: 20.1vw;
+	top: 7.8vw; */
+	margin: 14.1vw 0 0 17.9vw;
+
+	height: .5vw;
+	width: .28vw;
+}
+#right_eye_left_mobile{
+	height: .3vw;
+	width: .3vw;
+
+	left: .05vw;/*range: -.05vw to .15vw*/
+	top: .15vw;/*.15 range: 0vw to  .35vw*/
+
+}
+#left_socket_left{
+	/* left: 18.25vw;
+	top: 8.02vw; */
+
+	margin: 14.5vw 0 0 15vw;
+
+	height: .6vw;
+	width: .9vw;
+}
+#left_eye_left_mobile{
+	height: .4vw;
+	width: .4vw;
+
+	left: .35vw;/*range: 0vw to  .65vw*/
+	top: .15vw;/*range: 0vw to .4vw*/
+
+}
+
+/* -------------------------------------------------------------------------- */
+/*                               destop version                               */
+/* -------------------------------------------------------------------------- */
 @media (min-width: 992px), (orientation: landscape){
 
 	/*general eye classes*/
@@ -29,11 +100,12 @@
 	}
 	/*eye and socket for right girl*/
 	#socket_right{
-		left: 73.1vw;
-		top: 23vw;
+		/* left: 73.1vw;
+		top: 23vw; */
+		margin: 7vw 0 0 18vw;
 
 		height: .95vw;
-		width: 1.3vw;
+		width: 1.4vw;
 
 	}
 	#eye_right{
@@ -43,8 +115,9 @@
 	}
 	/*eyes and sockets for left girl*/
 	#right_socket_left{
-		left: 20.1vw;
-		top: 7.8vw;
+		/* left: 20.1vw;
+		top: 7.8vw; */
+		margin: 7.8vw 0 0 10.1vw;
 
 		height: .5vw;
 		width: .28vw;
@@ -58,8 +131,10 @@
 
 	}
 	#left_socket_left{
-		left: 18.25vw;
-		top: 8.02vw;
+		/* left: 18.25vw;
+		top: 8.02vw; */
+
+		margin: 8vw 0 0 8.25vw;
 
 		height: .6vw;
 		width: .9vw;
