--- a/css/shop.css
+++ b/css/shop.css
@@ -25,18 +25,44 @@
 	height: 100%;
 	overflow: auto;
 
-	background-color: rgba(0,0,0,.8);
+	background-color: rgba(0,0,0,.9);
 
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 
+
 }
 	.modal img{
 		height: auto;
 		width: 90vw;
 	}
+
+
+
+/*	buttons on pop up bigger pic */
+.popButtons{
+	position: fixed;
+	z-index: 100;
+	padding-top: 0vw;
+	left: 0;
+	top: 0;
+}
+		.popupNext{
+			position: fixed;
+			z-index: 101;
+			margin-top: 85vh;
+			margin-left:85vw;
+
+		}
+		.popupBack{
+			position: absolute;
+			z-index: 101;
+			margin-top: 85vh;
+			margin-left: 10vw;
+
+		}
 
 /* -------------------------------------------------------------------------- */
 /*                             commission section                             */
@@ -145,6 +171,7 @@
 				height: 7.5vw;
 
 				z-index: 10; /* above pics */
+
 			}
 			.prev{
 				margin-right: -2vw;
@@ -157,8 +184,8 @@
 					background-color: #ff7800;
 					cursor: pointer;
 				}
-		
-		/* -------------------------------------------------------------------------- */
+
+		/* -------------------------------------------------------------------------- 
 		/*                            commission email form                           */
 		/* -------------------------------------------------------------------------- */
 		input[name="_honey"] {
@@ -417,7 +444,7 @@
 		height: 100%;
 		overflow: auto;
 
-		background-color: rgba(0,0,0,.8);
+		background-color: rgba(0,0,0,.9);
 
 		display: flex;
 		flex-direction: row;
@@ -428,6 +455,29 @@
 		.modal img{
 			height: 90vh;
 			width: auto;
+		}
+
+		/*	buttons on pop up bigger pic */
+.popButtons{
+	position: fixed;
+	z-index: 100;
+	padding-top: 0vw;
+	left: 0;
+	top: 0;
+}
+		.popupNext{
+			position: fixed;
+			z-index: 101;
+			margin-top: 27vw;
+			margin-left:85vw;
+
+		}
+		.popupBack{
+			position: absolute;
+			z-index: 101;
+			margin-top: 27vw;
+			margin-left: 10vw;
+
 		}
 
 	
